[tool.poetry]
name = "foundry-nuke"
version = "0.2.0"
description = "Collection of script & resources for Foundry's Nuke software."
authors = ["Liam Collod <monsieurlixm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
colour-science = "0.4.3"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

