[tool.poetry]
name = "foundry-nuke"
version = "0.7.1"
description = "Collection of script & resources for Foundry's Nuke software."
authors = ["Liam Collod <monsieurlixm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
colour-science = "0.4.3"
types-PySide2 = "*"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

